@@ -3,6 +3,9 @@
 ## unreleased
 
 * calling timeturner with no arguments will now print help
+* adding new activities will end the current activity
+* when adding a new activity that starts before the current activity, the current activity will be ended
+* when adding a new activity that is contained by the current activity, the current activity will be split into two activities
 
 ## 0.1.1 (2023-03-27)
 
